@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2004 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: util.scm,v 1.1 2004/01/22 13:32:12 shiro Exp $
+;; $Id: util.scm,v 1.2 2004/02/21 04:15:31 shiro Exp $
 
 ;; This module contains generally useful routines, which don't belong to
 ;; a particular module.
@@ -22,8 +22,8 @@
 
 (define (kahua-error-string e . maybe-detail?)
   (if (get-optional maybe-detail? #f)
-    (ref e 'message)
     (call-with-output-string
-      (cut with-error-to-port <> (cut report-error e)))))
+      (cut with-error-to-port <> (cut report-error e)))
+    (ref e 'message)))
 
 (provide "kahua/util")
